fix scrollbar color

--- a/bundles/public/css/contacts.css
+++ b/bundles/public/css/contacts.css
@@ -332,7 +332,7 @@ ul.dealer .site-link {
 
     .nano .nano-content { padding: 10px; }
     .nano > .nano-pane   {
-        background: rgba(0,0,0,0.25);
+        background: rgba(0,0,0,0.05);
         width: 8px;
         right: 0;
     }
